// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api-file creates 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { TagApi } from './openapi/api';


export const TestServiceTagApi = {
  niceFunctionName: () => new OpenApiRequestBuilder<TagApi, 'getFn'>(
    TagApi,
    'getFn'
  )
};"
`;

exports[`api-file creates api file content for operation with no parameters or request body 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { TagApi } from './openapi/api';


export const TestServiceTagApi = {
  getFn: () => new OpenApiRequestBuilder<TagApi, 'getFn'>(
    TagApi,
    'getFn'
  )
};"
`;

exports[`api-file creates api file content for operation with only optional parameters 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { TagApi } from './openapi/api';


export const TestServiceTagApi = {
  getFn: (args?: {
    optionalQueryParam?: number
  }) => new OpenApiRequestBuilder<TagApi, 'getFn'>(
    TagApi,
    'getFn',
    args?.optionalQueryParam
  )
};"
`;

exports[`api-file creates api file content for operation with request body 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { TagApi } from './openapi/api';
import { TestEntity } from './openapi/model';

export const TestServiceTagApi = {
  createFn: (args: {
    body: TestEntity
  }) => new OpenApiRequestBuilder<TagApi, 'createFn'>(
    TagApi,
    'createFn',
    args.body
  ),
  updateFn: (args: {
    id: string,
    body: string[]
  }) => new OpenApiRequestBuilder<TagApi, 'updateFn'>(
    TagApi,
    'updateFn',
    args.id,
    args.body
  )
};"
`;

exports[`api-file creates api file content for operation with required parameters defined after optional parameters 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { TagApi } from './openapi/api';
import { TestEntity } from './openapi/model';

export const TestServiceTagApi = {
  createFn: (args: {
    requiredQueryParam: number,
    requiredPathParam: number,
    body: TestEntity[][],
    optionalQueryParam?: number
  }) => new OpenApiRequestBuilder<TagApi, 'createFn'>(
    TagApi,
    'createFn',
    args.requiredQueryParam,
    args.requiredPathParam,
    args.body,
    args.optionalQueryParam
  )
};"
`;

exports[`api-file creates api file content for operations with parameters and no request bodies 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { TagApi } from './openapi/api';


export const TestServiceTagApi = {
  getFn: (args: {
    id: string,
    limit?: number
  }) => new OpenApiRequestBuilder<TagApi, 'getFn'>(
    TagApi,
    'getFn',
    args.id,
    args.limit
  ),
  deleteFn: (args: {
    id: string
  }) => new OpenApiRequestBuilder<TagApi, 'deleteFn'>(
    TagApi,
    'deleteFn',
    args.id
  )
};"
`;

exports[`api-file creates api file contest for operation with operation name extension 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { TagApi } from './openapi/api';


export const TestServiceTagApi = {
  niceGetFunctionName: () => new OpenApiRequestBuilder<TagApi, 'getFn'>(
    TagApi,
    'getFn'
  ),
  nicePostFunctionName: () => new OpenApiRequestBuilder<TagApi, 'postFn'>(
    TagApi,
    'postFn'
  )
};"
`;
